--- a/_posts/sundry/2017-01-01-2016-notes.md
+++ b/_posts/sundry/2017-01-01-2016-notes.md
@@ -7,21 +7,21 @@ keywords: '2016,年记'
 description: null
 ---
 
-一年一记，一记一年，出来工作后，每年我都会写一篇记事来总结下自己过去一年的成长和不足，说来惭愧，自己给自己定的 \[2016 计划\]\([http://gitdc.com/2016/01/01/2015-notes.html](http://gitdc.com/2016/01/01/2015-notes.html\)\) 只完成了一半：
+一年一记，一记一年，出来工作后，每年我都会写一篇记事来总结下自己过去一年的成长和不足，说来惭愧，自己给自己定的 [2016 计划](http://gitdc.com/2016/01/01/2015-notes.html) 只完成了一半：
 
-## 加强自我驱动力 （完成）
+### 加强自我驱动力 （完成）
 
 听着很虚，但暗面上做了不少努力，修炼「内功」的 2016 年，在技术创新上，基本每个中大项目都有，挺感谢《代码大全》对我的帮助，在技术提升和管理上也有满意的成绩，这些都已经在公司的年度总结上长篇大论了，就不一一展开。
 
-## 拿下 iOS （未完成）
+### 拿下 iOS （未完成）
 
 风口不等人，2016 年明显感觉到了移动软件开发这把火不热了，也就没有继续学下去，算是拥抱变化的调整吧。
 
-## 50 篇博客文章 （未完成）
+### 50 篇博客文章 （未完成）
 
 写了 20 篇左右，按照上半年的速度是可以完成的，下半年因为学习和工作的事情耽搁了，总结来说就是懒。
 
-## 锻炼 && 减肥 （完成）
+### 锻炼 && 减肥 （完成）
 
 2016 年首发现自己变圆了，俗话说得好：「连自己身材都控制不好，怎么控制世界」，猛一惊，我就发奋图强的减到了正常身材，76kg \&gt;\&gt; 70kg，别看这 6kg 很少，可是我一段时间晚上只喝汤换来的。
 
@@ -33,7 +33,7 @@ description: null
 
 * 年尾拿到了公司股票
 
-## 2017 小目标
+### 2017 小目标
 
 既然计划总赶不上变化，那就定点小目标吧：
 
